--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.10",
     "@clerk/nextjs": "^5.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +21,7 @@
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
